# OpenStudio

./: CMakeLists.txt  OpenStudioCPack.cmake
openstudio/: CMakeLists.txt
openstudio/resources/: CMakeLists.txt
openstudio/src/generateiddfactory/: CMakeLists.txt
openstudio/src/openstudio_lib/: RefrigerationController.cpp  RefrigerationGraphicsItems.cpp
openstudio/src/utilities/: CMakeLists.txt  Utilities.i  UtilitiesCloud.i  UtilitiesDocument.i  UtilitiesFileTypes.i  UtilitiesIdd.i  UtilitiesIdf.i  UtilitiesPlot.i
openstudio/src/utilities/idf/: Handle.hpp  WorkspaceObject.cpp  WorkspaceObject.hpp
openstudiocore/src/utilities/: UtilitiesBCL.i  UtilitiesData.i  UtilitiesTime.i  UtilitiesUnits.i
openstudiocore/src/utilities/bcl/: BCL.hpp  BCLComponent.hpp  BCLFileReference.hpp  BCLMeasure.cpp  BCLMeasure.hpp  BCLXML.hpp  LocalBCL.hpp  LocalBCL.i  OnDemandGenerator.hpp  RemoteBCL.hpp
openstudiocore/src/utilities/bcl/test/: BCL_GTest.cpp
openstudiocore/src/utilities/core/: Application.hpp  ApplicationPathHelpers.hpp  Assert.hpp  Checksum.hpp  CommandLine.hpp  CommonInclude.i  Compare.cpp  Compare.hpp  Containers.hpp  Core.i  Exception.hpp  FileLogSink.hpp  FileLogSink_Impl.hpp  FileReference.hpp  Finder.hpp  GeneratorApplicationPathHelpers.hpp  Json.cpp  Json.hpp  LogMessage.hpp  LogSink.hpp  LogSink_Impl.hpp  Logger.hpp  Optional.hpp  Path.hpp  PathHelpers.hpp  PathWatcher.hpp  String.hpp  StringHelpers.hpp  StringStreamLogSink.hpp  StringStreamLogSink_Impl.hpp  System.hpp  TemporaryDirectory.hpp  URLHelpers.hpp  UUID.hpp  UnzipFile.hpp  UpdateManager.cpp  UpdateManager.hpp  Url.hpp  ZipFile.hpp
openstudiocore/src/utilities/core/test/: Path_GTest.cpp  UpdateManager_GTest.cpp
openstudiocore/src/utilities/data/: Attribute.hpp  Attribute_Impl.hpp  CalibrationResult.hpp  DataEnums.hpp  EndUses.hpp  Matrix.hpp  Tag.hpp  TimeSeries.hpp  Vector.hpp  Vector.i
openstudiocore/src/utilities/time/: Calendar.hpp  Date.hpp  DateTime.hpp  Time.hpp
openstudiocore/src/utilities/units/: BTUUnit.hpp  BTUUnit_Impl.hpp  CFMUnit.hpp  CFMUnit_Impl.hpp  CelsiusUnit.hpp  CelsiusUnit_Impl.hpp  FahrenheitUnit.hpp  FahrenheitUnit_Impl.hpp  GPDUnit.hpp  GPDUnit_Impl.hpp  IPUnit.hpp  IPUnit_Impl.hpp  IddUnitString.hpp  MPHUnit.hpp  MPHUnit_Impl.hpp  Misc1Unit.hpp  Misc1Unit_Impl.hpp  OSOptionalQuantity.hpp  OSQuantityVector.hpp  Quantity.hpp  QuantityConverter.hpp  QuantityFactory.hpp  QuantityRegex.hpp  SIUnit.hpp  SIUnit_Impl.hpp  Scale.hpp  ScaleFactory.hpp  TemperatureUnit.hpp  TemperatureUnit_Impl.hpp  ThermUnit.hpp  ThermUnit_Impl.hpp  Unit.hpp  UnitFactory.hpp  Unit_Impl.hpp  WhUnit.hpp  WhUnit_Impl.hpp
